[package]
name = "fetch-followers"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
# access twitter API
egg-mode = "0.16.0"
# twitter tokens
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4.2"
# debug traces
tonic = "*"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
tracing-opentelemetry = "0.17"
opentelemetry = { version = "0.17", features = ["trace", "rt-tokio"]}
opentelemetry-otlp = { version = "0.10", features = ["reqwest-client", "http-proto", "tonic", "tls", "tls-roots"]}
# error handling
thiserror = "1.0"
miette = { version = "4.2", features = ["fancy"] }
