[package]
name = "fetch-followers"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
# access twitter API
egg-mode = "0.16.0"
# twitter tokens
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4.2"
# debug traces
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
# error handling
thiserror = "1.0"
miette = { version = "4.2", features = ["fancy"] }
# timestamps
chrono = "0.4"
# database
sqlx =  { version = "0.5", features = ["chrono", "sqlite", "runtime-tokio-native-tls"] }
